# colink

./: .env.example  .gitignore  Cargo.toml  README.md  cert.pem  diesel.toml  key.pem
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/01_account/: down.sql  up.sql
migrations/02_platform/: down.sql  up.sql
migrations/03_org/: down.sql  up.sql
migrations/04_project/: down.sql  up.sql
migrations/2023-08-25-080953_create_system/: up.sql
migrations/2023-10-14-190421_create_users/: up.sql
migrations/2023-10-15-133050_create_users/: down.sql  up.sql
migrations/2023-10-19-082408_create_institutions/: down.sql  up.sql
migrations/2023-10-19-082408_create_orgs/: down.sql  up.sql
migrations/2023-10-24-083533_create_projects/: down.sql  up.sql
migrations/2023-11-08-080953_create_system/: down.sql  up.sql
migrations/2023-12-19-094408_create_orgs/: up.sql
migrations/2023-12-24-083533_create_projects/: up.sql
migrations/2023-12-25-080953_create_system/: down.sql  up.sql
src/: main.rs
src/config/: postgres.rs
src/configs/: app_state.rs  config.rs  mod.rs  state.rs
src/controllers/: auth_controller.rs  mod.rs  people.rs  register.rs
src/db/: account.rs  connection.rs  mod.rs  org.rs  platform.rs  project.rs  schema.rs
src/handlers/: auth_handlers.rs  error_handlers.rs  mod.rs  role_handlers.rs  section_handlers.rs  system.rs
src/handlers/auth/: auth_handlers.rs  mod.rs  role.rs  role_handlers.rs  section.rs  section_handlers.rs  user.rs
src/handlers/institution/: institution_handlers.rs  mod.rs
src/handlers/org/: info.rs  member.rs  member_handlers.rs  mod.rs  org.rs  org_handlers.rs  update_handlers.rs
src/middlewares/: auth_middleware.rs  mod.rs  role_middleware.rs
src/middlewares/auth/: mod.rs  (+6 more)
src/models/:  custom.rs   custom_types.rs  custom.rs  custom_types.rs  institutions.rs  mod.rs  orgs.rs  platform.rs  project.rs  projects.rs  system.rs  users.rs
src/routes/: auth.rs  mod.rs  orgs.rs  project.rs  routes.rs  static.rs
src/utilities/: file_utility.rs  mod.rs  proposal.rs  time_utility.rs
src/utils/: file_util.rs
static/: index.html
(+15 files in other folders)
