[package]
name = "co_link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
dotenv = "0.15"
tokio = "1"
sqlx = {version = "0.7.2", features = ["postgres"]}
diesel = { version = "2.1.3", features = ["postgres", "chrono", "serde_json"] }
chrono = "0.4"
diesel_migrations = "2.1.0"
