[package]
name = "co_link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-multipart = "0.6.1"
dotenv = "0.15"
tokio = "1"
sqlx = {version = "0.7.2", features = ["postgres"]}
diesel = { version = "2.1.3", features = ["postgres", "chrono", "serde_json"] }
chrono = { version = "0.4", features = ["serde"] }
diesel_migrations = "2.1.0"
bcrypt = "0.15.0"
serde = "1.0.189"
serde_json = "1.0.107"
validator = "0.16.1"
actix-cors = "0.7.0"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
jsonwebtoken = "9.0.0"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
