[package]
name = "co_link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4.5.1", features = ["rustls-0_22", "http2"]}
rustls = "0.22"
rustls-pemfile = "2.1.1"
actix-multipart = "0.6.1"
actix-files = "0.6.5"
futures-util = "0.3.30"
dotenv = "0.15"
tokio = "1"
sqlx = {version = "0.8.1", features = ["postgres"]}
diesel = { version = "2.1.5", features = ["postgres", "chrono", "serde_json"] }
chrono = { version = "0.4.35", features = ["serde"] }
diesel_migrations = "2.1.0"
bcrypt = "0.15"
serde = "1.0.197"
serde_json = "1.0.114"
validator = "0.17.0"
actix-cors = "0.7.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
jsonwebtoken = "9.2.0"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
git2 = "0.18.2"
tempdir = "0.3.7"
